# learn-opengl

./: CMakeLists.txt  main.cpp
core/header/io/: File.hpp
core/header/opengl/: BufferObject.hpp  OpenGLResource.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  VAO.hpp  VBO.hpp
core/header/sdl/: Image.hpp
core/header/stb/: Image.hpp
core/src/: main.cpp
core/src/io/: File.cpp
core/src/opengl/: BufferObject.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VAO.cpp  VBO.cpp
core/src/sdl/: Image.cpp
core/src/stb/: Image.cpp
resources/shaders/image-texture/: image-texture.frag  image-texture.vert
resources/shaders/solid-color/: solid-color.vert
resources/shaders/vertex-color/: vertex-color.vert
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
